--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
-
-    <link href="assests/css/style.css" alt="Portfolio">
+    <title>BasicPortfolio</title>
+    <link rel="stylesheet" href="assests/css/style2.css">
 </head>
+
+
+
+<header>
+    <div class="header-container">
+        <div class="mini">
+        <a href="/new.html" class="brand">Brian Calderon</a>
+
+        <nav>
+                <a href="../Basic-Portfolio/contact.html">Contact</a>
+                <a href="../Basic-Portfolio/portfolio.html">Porfolio</a>
+                <a href="../Basic-Portfolio/index.html">About</a>
+        </nav>
+    </div>
+    </div>
+</header>
+
 <body>
+    <div class="about">
+
+    <section>
+        <h2>Portfolio</h2>
+
+            <div class="projects">
+
+                <div id="RPG-Game">
+                    <p class="pg">RPG Game</p>
+                </div>
+
+                <div id="Hangman">
+                        <p class="pg">Hangman</p>
+                    </div>
+
+                 <div id="trivia">
+                         <p class="pg">Trivia Game</p>
+                    </div>
+
+                 <div id="widget">
+                         <p class="pg">Rutgers Widget</p>
+                    </div>
+
+                <div id="rock">
+                        <p class="pg">Rock Paper Scissors</p>
+                     </div>
+
+            </div>
+    </section>
+    </div>
+
     
 </body>
+    <footer>
+
+            <p>Copyright &copy;</p>
+        </footer>
+
+
 </html>
