--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
-
-    <link href="assests/css/style.css" alt="Contact">
-
+    <title>BasicPortfolio</title>
+    <link rel="stylesheet" href="assests/css/style.css">
 </head>
-<body>
-    
-    <form action="/action_page.php">
-        First name:<br>
-        <input type="text" name="firstname" value="Smith">
-        <br>
-        Last name:<br>
-        <input type="text" name="lastname" value="Mouse">
-        <br><br>
-        <input type="submit" value="Submit">
-      </form> 
 
+
+
+<header>
+    <div class="header-container">
+        <div class="mini">
+        <a href="/new.html" class="brand">Brian Calderon</a>
+
+        <nav>
+                <a href="../Basic-Portfolio/contact.html">Contact</a>
+                <a href="../Basic-Portfolio/portfolio.html">Porfolio</a>
+                <a href="../Basic-Portfolio/index.html">About</a>
+        </nav>
+    </div>
+    </div>
+</header>
+
+<body>
+    <div class="about">
+    <section>
+        <h2>About Me</h2>
+
+        <div class="form">
+            <form action="/action_page.php">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+            <label for="message">Message</label>
+            <input type="text" id="msg" name="message" placeholder="Write me a message..">
+
+  
+    <input type="submit" value="Submit">
+  </form>
+         </div>
+    </section>
+    </div>
+
+    
 </body>
+    <footer>
+
+            <p>Copyright &copy;</p>
+        </footer>
+
+
 </html>
