--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,55 +14,62 @@
 <header>
     <div class="header-container">
         <div class="mini">
-        <a href="/new.html" class="brand">Brian Calderon</a>
+            <a href="/new.html" class="brand">Brian Calderon</a>
 
-        <nav>
+            <nav>
                 <a href="../Basic-Portfolio/contact.html">Contact</a>
                 <a href="../Basic-Portfolio/portfolio.html">Porfolio</a>
                 <a href="../Basic-Portfolio/index.html">About</a>
-        </nav>
-    </div>
+            </nav>
+        </div>
     </div>
 </header>
 
 <body>
     <div class="about">
 
-    <section>
-        <h2>Portfolio</h2>
+        <section>
+            <h2>Portfolio</h2>
 
-            <div class="projects">
+            <div class="container">
 
-                <div id="RPG-Game">
-                    <p class="pg">RPG Game</p>
-                </div>
-
-                <div id="Hangman">
+                <div class="col1">
+                    <div id="Hangman">
                         <p class="pg">Hangman</p>
                     </div>
-
-                 <div id="trivia">
-                         <p class="pg">Trivia Game</p>
+                    <div id="trivia">
+                        <p class="pg">Trivia Game</p>
                     </div>
-
-                 <div id="widget">
-                         <p class="pg">Rutgers Widget</p>
-                    </div>
-
-                <div id="rock">
+                    <div id="rock">
                         <p class="pg">Rock Paper Scissors</p>
-                     </div>
+                    </div>
+
+                </div>
+
+                <div class="col2">
+                    <div id="RPG-Game">
+                        <p class="pg">RPG-Game</p>
+                    </div>
+                    <div id="widget">
+                        <p class="pg">Rutgers Info Widget</p>
+                    </div>
+                </div>
 
             </div>
+
+    </div>
+
+    </div>
     </section>
     </div>
 
-    
-</body>
-    <footer>
 
-            <p>Copyright &copy;</p>
-        </footer>
+</body>
+<footer>
+    <div class="foot">
+        <p></p>
+    </div>
+</footer>
 
 
 </html>
