--- a/portfolio.html
+++ b/portfolio.html
@@ -28,39 +28,39 @@
 <body>
     <div class="about">
 
-        <section>
-            <h2>Portfolio</h2>
+        <div id="main-container" class="container">
+            <section class="main-section">
+                <h1>Portfolio</h1>
 
-            <div class="container">
+                <div class="work">
+                    <img src="assests/images/hangman.png" alt="hangman">
 
-                <div class="col1">
-                    <div id="Hangman">
-                        <p class="pg">Hangman</p>
-                    </div>
-                    <div id="trivia">
-                        <p class="pg">Trivia Game</p>
-                    </div>
-                    <div id="rock">
-                        <p class="pg">Rock Paper Scissors</p>
-                    </div>
+                    <h3>Hangman</h3>
+                </div>
+                <div class="work">
+                    <img src="assests/images/rpg.png" alt="RPG Game">
 
+                    <h3>RPG Game</h3>
+                </div>
+                <div class="work">
+                    <img src="assests/images/trivia.jpg" alt="Trivia Game">
+
+                    <h3>Trivia Game</h3>
+                </div>
+                <div class="work">
+                    <img src="assests/images/widget.jpg" alt="Rutgers Info Widget">
+
+                    <h3>Rutgers Info Widget</h3>
+                </div>
+                <div class="work">
+                    <img src="assests/images/rock.jpg" alt="Rock Paper Scissors">
+
+                    <h3>Rock Paper Scissors</h3>
                 </div>
 
-                <div class="col2">
-                    <div id="RPG-Game">
-                        <p class="pg">RPG-Game</p>
-                    </div>
-                    <div id="widget">
-                        <p class="pg">Rutgers Info Widget</p>
-                    </div>
-                </div>
+            </section>
 
-            </div>
-
-    </div>
-
-    </div>
-    </section>
+        </div>
     </div>
 
 
